Add image in header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     Rock Gardens
     枯山水
-
+  <img src="images/banner.svg" alt="rocks and trees">
     Viewing
     Gravel
     Symbolism
@@ -36,6 +36,7 @@
     In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp
     Learn more about Symbolism
   </main>
+
   <footer>
     © 794 Heian Period
   </footer>
