--- a/index.html
+++ b/index.html
@@ -18,23 +18,55 @@
   </header>
 
   <main>
-    自然の親密な本質を模倣し、人生の真の意味を発見する。
-    Imitate the intimate essence of nature & discover the true meaning of life.
+    <dl>
+      <div>
+        <dt>
+          自然の親密な本質を模倣し、人生の真の意味を発見する。
+        </dt>
+        <dd>
+          Imitate the intimate essence of nature & discover the true meaning of life.
+        </dd>
 
-    閲覧
-    Viewing
-    A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo
-    Learn more about Viewing
+      <div>
+        <dt>
+          閲覧
+          Viewing
+        </dt>
+        <dd>
+          A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo
+        </dd>
+        <article>
+          Learn more about Viewing
+        </article>
+      </div>
 
-    砂利
-    Gravel
-    Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves
-    Learn more about Gravel
+      <div>
+        <dt>
+          砂利
+          Gravel
+        </dt>
+        <dd>
+          Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves
+        </dd>
+        <article>
+        Learn more about Gravel
+        </article>
+      </div>
 
-    象徴主義
-    Symbolism
-    In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp
-    Learn more about Symbolism
+      <div>
+        <dt>
+          象徴主義
+          Symbolism
+        </dt>
+        <dd>
+          In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp
+        </dt>
+        <article>
+        Learn more about Symbolism
+        </article>
+
+      </div>
+  </dl>
   </main>
 
   <footer>
