Update list in header tag and added h1 to title

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 </head>
 <body>
   <header>
+    <h1>
     Rock Gardens
     枯山水
+  </h1>
   <img src="images/banner.svg" alt="rocks and trees">
-    Viewing
-    Gravel
-    Symbolism
+    <ul>
+      <li>Viewing</li>
+      <li>Gravel</li>
+      <li>Symbolism</li>
+  </ul>
   </header>
 
   <main>
