Update divs and added images

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   </h1>
   <img src="images/banner.svg" alt="rocks and trees">
     <ul>
-      <li>Viewing</li>
-      <li>Gravel</li>
-      <li>Symbolism</li>
+      <li><a href="#Viewing">Viewing</a></li>
+      <li><a href="#Gravel">Gravel</a></li>
+      <li><a href="#Symbolism">Symbolism</a></li>
   </ul>
   </header>
 
@@ -32,6 +32,7 @@
         </dd>
 
       <div>
+        <img src="images/viewing.svg" alt="Monument and trees">
         <dt>
           閲覧
           Viewing
@@ -45,6 +46,7 @@
       </div>
 
       <div>
+        <img src="images/gravel.svg" alt="A rock">
         <dt>
           砂利
           Gravel
@@ -58,6 +60,7 @@
       </div>
 
       <div>
+        <img src="images/symbolism.svg" alt="A tree and rock">
         <dt>
           象徴主義
           Symbolism
