Add figure and figcaption tags

--- a/index.html
+++ b/index.html
@@ -10,76 +10,75 @@
 <body>
   <header>
     <h1>
-    Rock Gardens
-    枯山水
-  </h1>
-  <img src="images/banner.svg" alt="rocks and trees">
+      Rock Gardens
+      枯山水
+    </h1>
+    <img src="images/banner.svg" alt="rocks and trees">
     <ul>
       <li><a href="#Viewing">Viewing</a></li>
       <li><a href="#Gravel">Gravel</a></li>
       <li><a href="#Symbolism">Symbolism</a></li>
-  </ul>
+    </ul>
   </header>
 
   <main>
-    <dl>
-      <div>
-        <dt>
-          自然の親密な本質を模倣し、人生の真の意味を発見する。
-        </dt>
-        <dd>
-          Imitate the intimate essence of nature & discover the true meaning of life.
-        </dd>
+    <figure>
+      <figcaption>
+        <h2>自然の親密な本質を模倣し、人生の真の意味を発見する。</h2>
+        <p>Imitate the intimate essence of nature & discover the true meaning of life.
+        </figcaption>
 
-      <div>
-        <img src="images/viewing.svg" alt="Monument and trees">
-        <dt>
-          閲覧
-          Viewing
-        </dt>
-        <dd>
-          A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo
-        </dd>
-        <article>
-          Learn more about Viewing
-        </article>
-      </div>
+        <figure>
+          <img src="images/viewing.svg" alt="Monument and trees">
+          <figcaption>
+            <h2>
+              閲覧
+              Viewing
+            </h2>
+            <p>
+              A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo
+            </p>
+          </figcaption>
+          <article>
+            Learn more about Viewing
+          </article>
+        </figure>
+        <figure>
+          <img src="images/gravel.svg" alt="A rock">
+          <figcaption>
+            <h2>
+              砂利
+              Gravel
+            </h2>
+            <p>
+              Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves
+            </p>
+          </figcaption>
+          <article>
+            Learn more about Gravel
+          </article>
+        </figure>
 
-      <div>
-        <img src="images/gravel.svg" alt="A rock">
-        <dt>
-          砂利
-          Gravel
-        </dt>
-        <dd>
-          Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves
-        </dd>
-        <article>
-        Learn more about Gravel
-        </article>
-      </div>
+        <figure>
+          <img src="images/symbolism.svg" alt="A tree and rock">
+          <figcaption>
+            <h2>
+              象徴主義
+              Symbolism
+            </h2>
+            <p>
+            In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp
+            </p>
+          <article>
+            Learn more about Symbolism
+          </article>
+        </figure>
+    </main>
 
-      <div>
-        <img src="images/symbolism.svg" alt="A tree and rock">
-        <dt>
-          象徴主義
-          Symbolism
-        </dt>
-        <dd>
-          In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp
-        </dt>
-        <article>
-        Learn more about Symbolism
-        </article>
-
-      </div>
-  </dl>
-  </main>
-
-  <footer>
-    © 794 Heian Period
-  </footer>
+    <footer>
+      © 794 Heian Period
+    </footer>
 
 
-</body>
-</html>
+  </body>
+  </html>
