Add class to each major tag

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
+  <header class="banner">
     <h1>
       Rock Gardens
       枯山水
@@ -21,7 +21,7 @@
     </ul>
   </header>
 
-  <main>
+  <main class="main">
     <figure>
       <figcaption>
         <h2>自然の親密な本質を模倣し、人生の真の意味を発見する。</h2>
@@ -67,18 +67,18 @@
               Symbolism
             </h2>
             <p>
-            In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp
+              In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp
             </p>
-          <p>
-            Learn more about Symbolism
-          </p>
-        </figure>
-    </main>
+            <p>
+              Learn more about Symbolism
+            </p>
+          </figure>
+        </main>
 
-    <footer>
-      © 794 Heian Period
-    </footer>
+        <footer class="footer">
+          © 794 Heian Period
+        </footer>
 
 
-  </body>
-  </html>
+      </body>
+      </html>
