Added section to html

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
   </header>
 
   <main class="main">
-    <figure>
+    <section>
       <figcaption>
         <h2>自然の親密な本質を模倣し、人生の真の意味を発見する。</h2>
         <p>Imitate the intimate essence of nature & discover the true meaning of life.
         </figcaption>
+    </section>
 
+    <section>
         <figure>
           <img src="images/viewing.svg" alt="Monument and trees">
           <figcaption>
@@ -73,12 +75,13 @@
               Learn more about Symbolism
             </p>
           </figure>
-        </main>
+    </section>
+  </main>
 
-        <footer class="footer">
-          © 794 Heian Period
-        </footer>
+  <footer class="footer">
+      © 794 Heian Period
+    </footer>
 
 
-      </body>
-      </html>
+  </body>
+  </html>
