Add display grid to body tag

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
       Rock Gardens
       枯山水
     </h1>
-    <img src="images/banner.svg" alt="rocks and trees">
+    <nav>
     <ul>
       <li><a href="#Viewing">Viewing</a></li>
       <li><a href="#Gravel">Gravel</a></li>
       <li><a href="#Symbolism">Symbolism</a></li>
     </ul>
+  </nav>
+    <img src="images/banner.svg" alt="rocks and trees">
   </header>
 
   <main class="main">
