--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <header class="banner">
-    <h1>
-      枯山水
-      Rock Gardens
-    </h1>
+    <h2>枯山水</h2>
+    <h3>Rock Gardens</h3>
+
+
     <nav>
     <ul>
       <li><a href="#Viewing">Viewing</a></li>
@@ -26,7 +26,7 @@
   <main class="main">
     <section>
       <figcaption>
-        <h2>自然の親密な本質を模倣し、人生の真の意味を発見する。</h2>
+        <h1>自然の親密な本質を模倣し、人生の真の意味を発見する。</h1>
         <p>Imitate the intimate essence of nature & discover the true meaning of life.
         </figcaption>
     </section>
@@ -35,10 +35,8 @@
         <figure>
           <img src="images/viewing.svg" alt="Monument and trees">
           <figcaption>
-            <h2>
-              閲覧
-              Viewing
-            </h2>
+            <h2>閲覧</h2>
+            <h3>Viewing</h3>
             <p>
               A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo
             </p>
@@ -50,10 +48,8 @@
         <figure>
           <img src="images/gravel.svg" alt="A rock">
           <figcaption>
-            <h2>
-              砂利
-              Gravel
-            </h2>
+            <h2>砂利</h2>
+            <h3>Gravel</h3>
             <p>
               Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves
             </p>
@@ -66,10 +62,8 @@
         <figure>
           <img src="images/symbolism.svg" alt="A tree and rock">
           <figcaption>
-            <h2>
-              象徴主義
-              Symbolism
-            </h2>
+            <h2>象徴主義</h2>
+            <h3>Symbolism</h3>
             <p>
               In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp
             </p>
