Adjust HTML semantics

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="banner">
-    <h2>枯山水</h2>
-    <h3>Rock Gardens</h3>
-
-
+  <header role="banner">
+    <h2>
+      枯山水
+      Rock Gardens
+    </h2>
     <nav>
     <ul>
       <li><a href="#Viewing">Viewing</a></li>
@@ -23,9 +23,9 @@
     <img src="images/banner.svg" alt="rocks and trees">
   </header>
 
-  <main class="main">
+  <main role="main">
     <section>
-      <figcaption>
+      <figcaption class="center">
         <h1>自然の親密な本質を模倣し、人生の真の意味を発見する。</h1>
         <p>Imitate the intimate essence of nature & discover the true meaning of life.
         </figcaption>
