--- a/index.html
+++ b/index.html
@@ -14,59 +14,54 @@
       Rock Gardens
     </h2>
     <nav>
-    <ul>
-      <li><a href="#Viewing">Viewing</a></li>
-      <li><a href="#Gravel">Gravel</a></li>
-      <li><a href="#Symbolism">Symbolism</a></li>
-    </ul>
-  </nav>
+      <ul>
+        <li><a href="#Viewing">Viewing</a></li>
+        <li><a href="#Gravel">Gravel</a></li>
+        <li><a href="#Symbolism">Symbolism</a></li>
+      </ul>
+    </nav>
     <img src="images/banner.svg" alt="rocks and trees">
   </header>
 
   <main role="main">
     <section>
-      <figcaption class="center">
         <h1>自然の親密な本質を模倣し、人生の真の意味を発見する。</h1>
-        <p>Imitate the intimate essence of nature & discover the true meaning of life.
-        </figcaption>
+        <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
     </section>
 
     <section>
         <figure>
           <img src="images/viewing.svg" alt="Monument and trees">
           <figcaption>
-            <h2>閲覧</h2>
-            <h3>Viewing</h3>
-            <p>
-              A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo
-            </p>
+            <h3>
+              閲覧
+              Viewing
+            </h3>
+            <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
           </figcaption>
-          <p>
-            Learn more about Viewing
-          </p>
+          <p>Learn more about Viewing</p>
         </figure>
         <figure>
           <img src="images/gravel.svg" alt="A rock">
           <figcaption>
-            <h2>砂利</h2>
-            <h3>Gravel</h3>
-            <p>
-              Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves
-            </p>
+            <h3>
+              砂利
+              Gravel
+            </h3>
+            <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
           </figcaption>
           <p>
             Learn more about Gravel
           </p>
         </figure>
-
         <figure>
           <img src="images/symbolism.svg" alt="A tree and rock">
           <figcaption>
-            <h2>象徴主義</h2>
-            <h3>Symbolism</h3>
-            <p>
-              In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp
-            </p>
+            <h3>
+              象徴主義
+              Symbolism
+            </h3>
+            <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
             <p>
               Learn more about Symbolism
             </p>
