Delete what is not necessary on CSS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header role="banner">
+  <header role="banner" class="banner">
     <h2>
       枯山水
       Rock Gardens
@@ -23,13 +23,13 @@
     <img src="images/banner.svg" alt="rocks and trees">
   </header>
 
-  <main role="main">
-    <section>
+  <main role="main" class="main">
+    <section class="center">
         <h1>自然の親密な本質を模倣し、人生の真の意味を発見する。</h1>
         <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
     </section>
 
-    <section>
+    <section class="columns">
         <figure>
           <img src="images/viewing.svg" alt="Monument and trees">
           <figcaption>
@@ -69,7 +69,7 @@
     </section>
   </main>
 
-  <footer class="footer">
+  <footer role="footer" class="footer">
       © 794 Heian Period
     </footer>
 
