Correct heading and paragraph tags

--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 </head>
 <body>
   <header role="banner" class="banner">
+    <h2>枯山水</h2>
+    <p>Rock Gardens</p>
     <nav>
-      <h2>
-        枯山水
-        Rock Gardens
-      </h2>
       <ul>
         <li><a href="#Viewing">Viewing</a></li>
         <li><a href="#Gravel">Gravel</a></li>
@@ -33,10 +31,8 @@
         <figure>
           <img src="images/viewing.svg" alt="Monument and trees">
           <figcaption>
-            <h3>
-              閲覧
-              Viewing
-            </h3>
+            <h3>閲覧<h3>
+            <p>Viewing</p>
             <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
           </figcaption>
           <p>Learn more about Viewing</p>
@@ -44,10 +40,8 @@
         <figure>
           <img src="images/gravel.svg" alt="A rock">
           <figcaption>
-            <h3>
-              砂利
-              Gravel
-            </h3>
+            <h3>砂利</h3>
+            <p>Gravel</p>
             <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
           </figcaption>
           <p>
@@ -57,10 +51,8 @@
         <figure>
           <img src="images/symbolism.svg" alt="A tree and rock">
           <figcaption>
-            <h3>
-              象徴主義
-              Symbolism
-            </h3>
+            <h3>象徴主義</h3>
+            <p>Symbolism</p>
             <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
             <p>
               Learn more about Symbolism
