--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <header role="banner" class="banner">
-    <h2>枯山水</h2>
-    <p>Rock Gardens</p>
+    <h1>枯山水</h1>
+    <h2>Rock Gardens</h2>
     <nav>
       <ul>
         <li><a href="#Viewing">Viewing</a></li>
@@ -23,7 +23,7 @@
 
   <main role="main" class="main">
     <section class="center">
-        <h1>自然の親密な本質を模倣し、人生の真の意味を発見する。</h1>
+        <h2>自然の親密な本質を模倣し、人生の真の意味を発見する。</h2>
         <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
     </section>
 
@@ -31,8 +31,8 @@
         <figure>
           <img src="images/viewing.svg" alt="Monument and trees">
           <figcaption>
-            <h3>閲覧<h3>
-            <p>Viewing</p>
+            <h2>閲覧<h2>
+            <h3>Viewing</h3>
             <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
           </figcaption>
           <p>Learn more about Viewing</p>
@@ -40,8 +40,8 @@
         <figure>
           <img src="images/gravel.svg" alt="A rock">
           <figcaption>
-            <h3>砂利</h3>
-            <p>Gravel</p>
+            <h2>砂利</h2>
+            <h3>Gravel</h3>
             <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
           </figcaption>
           <p>
@@ -51,8 +51,8 @@
         <figure>
           <img src="images/symbolism.svg" alt="A tree and rock">
           <figcaption>
-            <h3>象徴主義</h3>
-            <p>Symbolism</p>
+            <h2>象徴主義</h2>
+            <h3>Symbolism</h3>
             <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
             <p>
               Learn more about Symbolism
