--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <h2>閲覧</h2>
         <h3>Viewing</h3>
         <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
+        <img src="images/viewing.svg" alt="Monument and trees">
         <a href="#">Learn more about Viewing</a>
       </li>
 
@@ -39,6 +40,7 @@
         <h2>砂利</h2>
         <h3>Gravel</h3>
         <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
+        <img src="images/gravel.svg" alt="A rock">
         <a href="#">Learn more about Gravel</a>
       </li>
 
@@ -46,12 +48,13 @@
         <h2>象徴主義</h2>
         <h3>Symbolism</h3>
         <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
+        <img src="images/symbolism" alt="A tree and rock">
         <a href="#">Learn more about Symbolism</a>
       </li>
     </ul>
     </main>
 
-    <footer role="footer" class="footer">
+    <footer role="contentinfo" class="footer">
       © 794 Heian Period
     </footer>
 
