Center elements in header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header role="banner" class="banner">
-    <h1><bold>枯山水</h1>
+    <h1>枯山水</h1>
     <h2>Rock Gardens</h2>
     <nav>
       <ul>
