Center the footer tag

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </li>
 
       <li>
-        <img src="images/symbolism" alt="A tree and rock">
+        <img src="images/symbolism.svg" alt="A tree and rock">
         <h2>象徴主義</h2>
         <h3>Symbolism</h3>
         <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
