--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
   <header role="banner" class="banner">
-    <h1>枯山水</h1>
-    <h2>Rock Gardens</h2>
+    <h1>
+      <i lang="ja">枯山水</i>
+      <span>Rock Gardens</span>
+    </h1>
     <nav>
       <ul>
         <li><a href="#Viewing">Viewing</a></li>
@@ -23,14 +25,14 @@
 
   <main role="main" class="main">
     <section class="center">
-      <h2>自然の親密な本質を模倣し、人生の真の意味を発見する。</h2>
+      <i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する</i>
       <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
     </section>
 
     <ul>
       <li>
         <img src="images/viewing.svg" alt="Monument and trees">
-        <h2>閲覧</h2>
+        <i lang="ja">閲覧</i>
         <h3>Viewing</h3>
         <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
         <a href="#">Learn more about Viewing</a>
@@ -38,7 +40,7 @@
 
       <li>
         <img src="images/gravel.svg" alt="A rock">
-        <h2>砂利</h2>
+        <i lang="ja">砂利</i>
         <h3>Gravel</h3>
         <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
         <a href="#">Learn more about Gravel</a>
@@ -46,7 +48,7 @@
 
       <li>
         <img src="images/symbolism.svg" alt="A tree and rock">
-        <h2>象徴主義</h2>
+        <i lang="ja">象徴主義</i>
         <h3>Symbolism</h3>
         <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
         <a href="#">Learn more about Symbolism</a>
