--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <main role="main" class="main">
     <section class="center">
-      <i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する</i>
+      <i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i>
       <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
     </section>
 
