Correct grid templates

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <i lang="ja">枯山水</i>
       <span>Rock Gardens</span>
     </h1>
-    <nav>
+    <nav role="navigation">
       <ul>
         <li><a href="#Viewing">Viewing</a></li>
         <li><a href="#Gravel">Gravel</a></li>
@@ -59,7 +59,5 @@
     <footer role="contentinfo" class="footer">
       © 794 Heian Period
     </footer>
-
-
   </body>
   </html>
